@@ -39,6 +39,7 @@ Bug fixes
  * Tags added on the multiple image uploader are now saved correctly
  * Documents created by a user are no longer deleted when the user is deleted
  * Fixed a crash in ``RedirectMiddleware`` when a middleware class before ``SiteMiddleware`` returns a response (Josh Schneier)
+ * Fixed error retrieving the moderator list on pages that are covered by multiple moderator permission records (Matt Fozard)
 
 
 Upgrade considerations
