@@ -20,6 +20,7 @@ Changelog
  * Fix: Tags added on the multiple image uploader are now saved correctly
  * Fix: Documents created by a user are no longer deleted when the user is deleted
  * Fix: Fixed a crash in `RedirectMiddleware` when a middleware class before `SiteMiddleware` returns a response (Josh Schneier)
+ * Fix: Fixed error retrieving the moderator list on pages that are covered by multiple moderator permission records (Matt Fozard)
 
 1.3.1 (05.01.2016)
 ~~~~~~~~~~~~~~~~~~
